tests/snapshots/ui__unfinished_arithmetic_expression.snap
---
source: tests/ui.rs
expression: "test_sushi(\"1 -;\")"
---
### stdout ###
[EMPTY]
### stderr ###
Error: Failed to parse
   ╭─[<unknown>:1:1]
   │
 1 │ 1 -;
   ·    ┬  
   ·    ╰── Unexpected token
   · 
   · Note: Found `;`, expected one of: `{literal}`, `{ident}`, `not`, `-`, `(`.
───╯

